Added borders, updated text for switches control, added background, made it look better in general.

--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AutoSwitchControl.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/AutoSwitchControl.xaml
@@ -6,8 +6,9 @@
              xmlns:local="clr-namespace:_2018_Main_Dashboard"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="200">
-    <Grid Background="LightSlateGray">
-        <ComboBox FontSize="15" SelectedIndex="0"  Name="AutoCombobox"  Width="75" Height="25" Margin="10,7,115,68" SelectionChanged="Goal_SelectionChanged">
+    <Grid Background="Black">
+        <Rectangle Stroke="White" StrokeThickness="3"></Rectangle>
+        <ComboBox FontSize="15" SelectedIndex="0"  Name="AutoCombobox"  Width="75" Height="25" Margin="10,65,115,10" SelectionChanged="Goal_SelectionChanged">
             <ComboBoxItem Name="AutoPostitonLeft">
                 Left
             </ComboBoxItem>
@@ -18,22 +19,23 @@
                 Right
             </ComboBoxItem>
         </ComboBox>
-        <ComboBox FontSize="15" SelectedIndex="0"  Name="AutoComboboxversion"  Width="75" Height="25" Margin="115,7,10,68" SelectionChanged="Goal_SelectionChanged">
+        <ComboBox FontSize="15" SelectedIndex="0"  Name="AutoComboboxversion"  Width="75" Height="25" Margin="115,65,10,10" SelectionChanged="Goal_SelectionChanged">
             <ComboBoxItem Name="AutoScale">
-                Good
+                Yes
             </ComboBoxItem>
             <ComboBoxItem Name="AutoSwitch">
-                Bad
+                No
             </ComboBoxItem>
             <ComboBoxItem Name="AutoBoth">
                 Kyle
             </ComboBoxItem>
         </ComboBox>
-        <TextBlock Name="PositionText" Margin="-27,32,102,5" TextAlignment="Center">
+        <TextBlock Name="PositionText" Margin="10,43,115,40" TextAlignment="Center" Foreground="White">
             Position
         </TextBlock>
-        <TextBlock Name="GoalText" Margin="85,32,-21,5" TextAlignment="Center">
-            Team Ability
+        <TextBlock Name="GoalText" Margin="115,43,10,37" TextAlignment="Center" Foreground="White">
+            Switch Priority
         </TextBlock>
+        <TextBlock Name="Auto" Text="Autonomous Selection" Foreground="White" TextAlignment="Center" FontSize="18" Margin="0,0,0,71" FontWeight="DemiBold"/>
     </Grid>
 </UserControl>
