--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/JoystickWidget.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/JoystickWidget.xaml
@@ -7,6 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="250" d:DesignWidth="300">
     <Grid Background="Black">
+        <Rectangle Stroke="White" StrokeThickness="4"></Rectangle>
         <local:AxisGrid x:Name="JoystickAxisGrid" Margin="10,73,240,127"/>
         <local:ZAxisBar x:Name="JoystickZAxisBar" Margin="73,91,177,146"/>
         <Grid Margin="128,78,12,92">
