--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
@@ -12,47 +12,20 @@
     <Window.Resources>
         <!--hello world-->
     </Window.Resources>
-    <Border Background="LightSlateGray">
+    <Grid>
+        <Image Source="GreenHill.png" Margin="-10,-50,0,-110">
+            
+        </Image>
+        <Grid Width="1366" Height="527">
 
+            <local:JoystickWidget x:Name="JoystickWidget" Width="300" Height="250"  Margin="10,10,1056,267"/>
+                <local:AlertBox x:Name="AlertWidget" Width="366" Height="500" Margin="990,10,10,10"/>
+                <local:AutoSwitchControl x:Name="AutoSwitch" Width="200" Height="100" Margin="315,10,851,417"/>
+            <local:JoystickWidget x:Name="SwitchesWidget" Width="300" Height="250"  Margin="10,267,1056,10"/>
+
+
+
+        </Grid>
         
-            <Grid Width="1366" Height="527">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="66"/>
-
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                    <RowDefinition Height="50"/>
-                </Grid.RowDefinitions>
-                <local:JoystickWidget x:Name="JoystickWidget" Grid.Row="0" Grid.RowSpan="5" Grid.Column="0" Grid.ColumnSpan="3" />
-                <local:AlertBox x:Name="AlertWidget" Grid.Row="0" Grid.RowSpan="10" Grid.Column="10" Grid.ColumnSpan="4"/>
-                <local:AutoSwitchControl x:Name="AutoSwitch" Grid.Row="0" Grid.RowSpan="2" Grid.Column="3" Grid.ColumnSpan="2"/>
-                <local:JoystickWidget x:Name="SwitchesWidget" Grid.Row="5" Grid.RowSpan="5" Grid.Column="0" Grid.ColumnSpan="3"/>
-
-
-
-            </Grid>
-        
-    </Border>
+    </Grid>
 </Window>
